@@ -6,3 +6,5 @@
 	* Added 'README'.
 2015-06-15 Fred Gleason <fredg@paravelsystems.com>
 	* Added a build system.
+2015-06-15 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'rfconnect.desktop'.
